[package]
name = "arbitrage-bot"
version = "3.0.0"
edition = "2025"
authors = 0xRozier
description = "Arbitrage bot for Base network"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Ethereum
ethers = { version = "2.0", features = ["abigen", "ws", "rustls"]}
ethers-contract = "2.0"
ethers-providers = "2.0"
ethers-signers = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
dotenv = "0.15"

# HTTP server for metrics
warp = "0.3"
hyper = "0.14"
reqwest = { version = "0.11", features = ["json"] }

# Time
chrono = "0.4"

# Utilities
hex = "0.4"
once_cell = "1.19"

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[[bin]]
name = "arbitrage-bot"
path = "src/main.rs"
